feat:extract file

--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,9 @@
     <version>1.0.0</version>
 
     <name>csv-streamer</name>
-    <description>Simple lazy CSV reader</description>
+    <description>Lazy CSV reader: plain java, no dependencies, streaming, resource reader, unzip, autodetect delimiters,
+        Immutable, InnerCSV NullPointerException or IndexOutOfBoundsException
+    </description>
     <url>https://github.com/YunaBraska/csv-streamer</url>
 
     <scm>
